--- a/index.html
+++ b/index.html
@@ -25,67 +25,68 @@
 <div class="container mt-5">
     <h2 class="text-center mb-4">My PGP Public Key</h2>
     <pre id="pgpPublicKey" class="p-3 border rounded">
-    -----BEGIN PGP PUBLIC KEY BLOCK-----
-Comment: User-ID:	Divija <divija027@proton.me>
-Comment: Created:	02/03/24 11:36 AM
-Comment: Expires:	02/03/26 12:00 PM
+-----BEGIN PGP PUBLIC KEY BLOCK-----
+Comment: User ID:	Divija MV <divija027@proton.me>
+Comment: Valid from:	10/20/24 11:41 AM
+Comment: Valid until:	10/20/30 12:00 PM
 Comment: Type:	4,096-bit RSA (secret key available)
-Comment: Usage:	Signing, Encryption, Certifying User-IDs
-Comment: Fingerprint:	10F1EF361E456278BDCB261647815909A4595A77
+Comment: Usage:	Signing, Encryption, Certifying User IDs
+Comment: Fingerprint:	A8A13C7350B70B8AB4F74BDF4FC0495B7E9E1A0B
 
-mQINBGXiwc4BEADMJGQFmHetIBZRKkfAVyYUtSIOTjB+OtsRLRMeI/DGtcyg9LeI
-qCgOf1xYpscdzjjCy66RQk9LvPIRaFc5vmz2Lqo4QinYK5nbpvm03Ei2m6tXIkuU
-87SbNLYRn0brV3AOWl7qR6gX6d0Y6r+E3d23fCdyu5fJVHBURbK6ANjXo3SslPn2
-3gT8WgoIjx9XTT9yK73BCZoshyEdiY16KzG5f/ewPihaSIspIm8BRNXvfru0mHAL
-87RCJ00oMx44zDmiBUWSPej0uyvHoTMVyu89XomYsHhwavKrBDmmVBIsQ2Ei1JS+
-BocldzHHvNb0mH14Vz+DlHv3qHZ2lMcMdB+3PxHcrEs+K+Q6OlI94BXsVFsA49/Z
-xnyf9+CzeA1O3P+FM0QHSAc7Xo6mk9S3aosEGxh3I+MPzYAQY/08di2FeE1bVcLM
-7Kabt0gn1QASnVBLgcWKQ4lhCcxrJ3+0KdqyFwwdca6NQrsDJRX53FqNYW8AYE89
-4s1u7HOE8AwBE7ODtZdHwMQXCQ/Rm9Px0bpRL7vy2w7hboIT6A4xnOoe3I2paaCM
-WJRFO7HCMSQ2eLCAUstFVi0YtaL7rR/5O1v20fGr3SrpXaySY/OuBHGYWpziyVq3
-IPlVJF/GYNKUxN1+SMFie/K9+tabnP4p16KUD0kDmlzfLN9eC6q14iLspQARAQAB
-tBxEaXZpamEgPGRpdmlqYTAyN0Bwcm90b24ubWU+iQJUBBMBCgA+FiEEEPHvNh5F
-Yni9yyYWR4FZCaRZWncFAmXiwc4CGwMFCQPCbJoFCwkIBwIGFQoJCAsCBBYCAwEC
-HgECF4AACgkQR4FZCaRZWnfKkw//YYyjPEAb8ABUinkrbDayNX61bjiyseufSn9m
-lwiCQI2d/pyqxmfpC2yxgj+DcWsuvOHIpghpr+lVnW2AOofW0iQgfCCj1USzkxb/
-1Q/QnB1BLwYBOEpOVi41cn+fEMOF5pOqndEuZfnVof3a8BAFoUnEducEkn2Ki+Qe
-ojWfXL1mVoNBuA6cp6hcAFk9YRm3AHEXhKJpC90hJPqBc344nFtSXj2ivvH4YD7n
-kXZe8l1jl8jjAgkdoE8C/5kVmClMd0plIZYC8fa/LWV2svQZwJJZpc1HJn455zea
-wRajL1CIkmStf4LRo54aZMwoN/C/y1ziQN1g2tcF4epWUgk/TD7U+23buKIhNY0R
-XLompGpirtoUoQaH41lqzr4vGSD6zvelZGvOcFfdWyZR7u4qob8j9B0hQR2eEWUq
-AcWGSpIuT3P+IufwKMySE0BwiESa8r+QYGDeWwOzXFHsuVlx0qT4tLpVsgbHIJSD
-pyCvrEhLBao28h9vyHZPR72pHP+kkgCoVoeWOp0crcvtl3GEEG4SCHNiEDGMrx4W
-v2rBQltxFCfbdjOCWm8HAtpFLMHWTYdxSNu5uXWpf4N4oFYQBPCx0aXAYFXM/6yv
-kOrINPsn/b7zjdc704XwSoNPeZ4zVzW1nUptvBG1bE0zfrrisavCvJhBlsBSD2wm
-JO8DxgO5Ag0EZeLBzgEQAMnxo/m5r6Idv92ncGPrlu+cWl2+6cEf0LcvrHxkKCnO
-0rlykz4AKwq6GL0GshLd900LzFw+6cLMDWOuCOWVc8kD3NPFrqB77FJ3edRgGxBK
-iqzmIh2kfFrokrrpWlhLs8QfvNrUlDCmS7Hw5igjBSeBtnsyD1Ee4bmYzhtBldzu
-UazP8vyxT22Dka8sLWNdXbEqzXUIZIgMcUFILlwP3xaRrMHUmh5N/wxKTHSLo4IG
-aRf8/zMgdj1jmjOLYqPsDdx//xIf9NQpdcxTOGG1tZK4kCP/jbkWqhSs0r2OcCK2
-8mqZDTz18ThHOXHiBm7zrp332izimlOaP12u/ovX97ZRo/k99+xsl/yrqsxFdedT
-yibdcXGogNvqnp2zxbXReCNlbVJT8E2bL3CIDNU5KKeu1MuTOfYUVD7bSeGhylWn
-77PjhTK/vhVUH5B7DRJQcDP95iFC1YvdhTFRhcknPnELJtAyEc0P9RzTG3nBWVk1
-lt46vX4FkH94U6hu252AHO1n+IF7lCQEN85HOMMIUkZRngsg6GgSsq8Agl25HwXH
-F9o5d43ymQdtcu9iVqNgKrSH+jwn8EsSU9m8ReUC1R+Weqgd5w6MlnxMBHSRv3yH
-5UYpEMuxyf0cmd4eNpD0HuWdIM991lNpgH/ZbsQ69m3JrkkgVQbz7fVAVcV0Qwv3
-ABEBAAGJAjwEGAEKACYWIQQQ8e82HkVieL3LJhZHgVkJpFladwUCZeLBzgIbDAUJ
-A8JsmgAKCRBHgVkJpFlad/RlD/9bE5urgQbpd1uX6vcSCoWFzl6+AF7x1xFZEnyU
-xCGQ88izYrSWq2n2jnRBZ7UY+rpnBLdTk/pimp9yRYfU6lVyyM3PVbme0FYBPnQt
-WJdYVQ8b+aNhM2TvDpTNVV4evKP5ub0uPU0TKm69vXNhHHWji8KS5OKMCi3ggFRJ
-uJigulLq6HnRumuFf4Fni2UhWN8RQiuo7Sz/dbKpVy32ZXDsUjtF9E7EBqX30PH2
-cyTH/geHoB+t8dvrUv8M9AGaA/LgVq3rYWlF/jRl1RwI8v7c/0O8RN4w+7bdPjTx
-7kuPYww4M6QCTqu1JLfJPst8Rc4pjMoNUIuwXYVfFJfCkpprQcZIoGF1ohoVZhfu
-SI/vQp5L6W0tQkG6ZK/+4x2JmAwB5JGRMleueHwxrc889v+RgY6hQ2OBheGs0ggo
-0LB/PDMxaRd8U8TzHKmMBT2Ocj54IZRF6WyOsIlDnrwYnMnXogsx/Eeb9Y17fPtJ
-THwMIbBWmUDM0F0kNgDXrQ+HN+CQU3FlbBa234kxDgc4UAgHJfrsK33DUPdttPD4
-pef1QrLPEx1E4Mf9Tn2cI6nHngristBJchgCh1WKFEc8FSPN/DoLCi2fXoZVX+qm
-jn6re48V1CnF+RbH5KCsfB1V8NcYsRb4/qgcgMaJocQ5GpIghiDGY8LqcScRvbEC
-GKuucg==
-=JfY6
+mQINBGcUnvsBEADjRChDOzucJ/CtylJksmH/biLLxZp9QbkqIabRm1H2Jrm7oFI9
+cIt6wzBtdzcwfVigJc/nhucZ0JBBJX0SvqRJvXoYsYS5lpCoIynKPwyFxpI4VWRs
+a26O8jKdR8669RnL97/3KzmA5whE3Dk7AUrMRz+x8povPXIpCUeB7EHwED6S+pUB
+uGO67NHOdyyxDqKrHi7f2gAqhkr+KrJmNlvfl92LJYcN6MquFo+uQ0Pc5aZuWgL1
+1Y5vRNoIlqKjIH1Nhv9zlN+fTaCT7BFkGCDDWMP8XA7XRNgf1esCPy3KagWRtGiX
+dQSryGRK7dY1tFeVaRgPZijid+6uK8OczrxhoZAe/Qa3I4PlahKQMuzpTOlqiIql
+2WISzbEUIlS3LBTaRdpvjT3+w/JJLtGAqmco2MTe+GDkAA+NCb1XSYjb+PkaZ7Hv
+QfRDPen9piGN+887iapUPctRWLl90oUKkymJQpkOPzUwPktFiIsGMmv7R+Vm5OPX
+czZs9O9Mpa4wJPcNGE0VXL98nN5aRrEf3GTYYJbt7SAD0J5gX0i7oVS5IOpG1W4e
+plc7mHERgdTl8jrUYHL/K7wLGDDzd7I1MiC1lPk14nIh4H+HkxZo1nx6PFPD/DZA
+N5+5ElcXp1D+MyRyiGB0Ho6tIK4RfXfNChJhxffBu2LpYWT/jOxAykQDewARAQAB
+tB9EaXZpamEgTVYgPGRpdmlqYTAyN0Bwcm90b24ubWU+iQJXBBMBCABBFiEEqKE8
+c1C3C4q090vfT8BJW36eGgsFAmcUnvsCGwMFCQtIiu0FCwkIBwICIgIGFQoJCAsC
+BBYCAwECHgcCF4AACgkQT8BJW36eGgvAGxAApCD+Ba9sYvWK7so5JC9RIu8ioipu
+kn9ctC0pfYp5rS1tMzovnTpsxO69xNkk6lo4EZbp7DQ4sFs9rqszMqbiklrHAqex
+NCT2kfG8lWMCNVhPd+EkfR3sc64M4n9fewQxt1DO4vDr4fL14iew8z+unBomE4v4
+GCfPBQxSyhD1oy1acCOssoG73IiOzKHjXyRBMr1kLhqRt69uAo6zLsaKZKfYNOr1
+QJ18EkQ0faz8/BH6YWv70zVlgaRvj6fVCJ/vvDWfG/8xaOI5Sn4jprVYWf4Ie4Cy
+oiSYVJoeze+4cRzaDHSfoCW6cZRWMlmwVdua5oqBDOIlarHeyv17gdtlA7Z+H1AK
+kZ9iOQaIRBqhRZ/2GhHKs6hmaR7Gd5tXTXEMlNLhjX6mAUcpQiPUm/kcQyBghtCe
+l1QCKjqaDpdLhFt2+YTPjPZ2i1ni2tythYEX0NZJmbv9Hl/tF6e+yRns8doUZyAj
+1pQXK924NneP00lzbpbxj6Jh28BhvRFE8rYtZXagZQZQpCd+pcToQGsGM4oFXVRm
+Y2PqB7wSurvmJGSebDXqCktvAIXhCVKdn58HWPtWfZXgaSKQCW5MZ4XQDHyqtrI4
+z/elnpvAWp1IkHOq3wcTUrMO3OGlMbZj7W2YxIWsf/Q4C/lRjnJMm44FFhI32fqD
+CP9dCgC0cDPVteW5Ag0EZxSe+wEQALSwrDpollZP+jL1/nVKI604g2P6GywzGevh
+Sygy+M2t+h5NfF8wOadWFL/oT4dEM/Ti04TDdqrMrBxzWEcFRnOTAjgqdlGSbydM
+VG14BdSXNYUONmOZ4hz+kYPqqZQ6pQOGuSfQWQqfuoUHHODWdM8Qi1utr9rkOgO0
+GBHuvhaktLMi39B8buzmg2w3WwB2TnLs9KaNKQdNf/MkeWoLS+Hdf49m4xt4mUcj
+kmxwPJsS2RdnjuRV9fmcJCez0m9h3ujhSFPS3K/moLUOKCe77fRiqub6I/YPjndU
+TrKwHrn5awkjFcJAmbSTbqp3yaotSMqNn9pJwb9K5F8Hq/2faO3tmwIfk+gJypTK
+yICFsLPVWQMCefhnPdhF3GdeG+qIMz5T6FQpo80E4Z4llGSFl2XpU1fA/eAZlQbD
+GDFitoPgPnAt8qIj1d9udL27FqdgVv7Io0GEinHfDuz/FRwrjsqQekCxm23aNztz
+2SVMEiDkmvK3YUWMAX4psjd4meejni6SfJhlG+lmmg49+tgjO50deGhXN/v8vWGe
+NszTqxz9gZHGpskoqxMDcEPTFKcCHeQWrjV+V52WDAQK9uoo/vBtReaelgSoJXkO
+yCMR5YtAHyMeqqiseS58dvk3w1yAHNokbIrvXxW/m8xGZqHMS6FIQTUme2rbNHNJ
+Mauk0toDABEBAAGJAjwEGAEIACYWIQSooTxzULcLirT3S99PwElbfp4aCwUCZxSe
++wIbDAUJC0iK7QAKCRBPwElbfp4aC8gUD/0dqarCl3gV+ME8bS+2LKxrYOkU/WE/
+/k5xWkhTV755pXxtN/I/UKfnhrI7P9x7hbfNt3Y7HsdZ+9EaMa3QNqjLD1sgqQjR
+j6Ry9EWyMUN0bqU3YO6OnJnofhTgzJPxSvXBBhQJdQVRowa8qdbJoz/KdNWSVD3Z
+XekhMGaH0N1yLM3ce8p1bcDINlK++W4V4Gbkw9ydkABKCerd74khuhJ3qCUA0HHq
+LrkN7X45yZ1jwfVnq0BQR9L4HDZcJATmP12kGoM5zaZcGNV2s4F9MCPcYYywsNiC
+PCNVJffOCpr33kqhvTznwq3gzG3HrT4e9XhPJgDSYrjIJDtKAQrJO/MKq8lNbFCI
+IdwppZXe9XpnNASZ7Dg1z1O5PlgOPVaEPVC/OlHXHuilzmk5tlOpqUubv8GCbPdS
+3ng5KKqebswjeMBrom19N58FQYjp5kUnluC86wE3sQtsk1IqQSapqbXh/AAeBdu4
+f2hP4TpRZ27nw/FdXv8tauqdHwmQqlpYMoklixi9jEUhSzZcz1jVIsE0021FMEUI
+uZVtIWaS84J5/VCwd3fEDoGoyroelVJS7kpk6PZ0KGY38eTvpeaCGU2emQNMrSrx
+izrRLb/U4u8rX+I0+8YcX+7qVtDEx6j13xnNOUYgoOjsQrwGjXBKXCUcigiLYs47
+VGbdmojPrmA9Hw==
+=QbA3
 -----END PGP PUBLIC KEY BLOCK-----
+
   
-        
-    </pre>
+       
+   </pre>
 </div>
 
 <!-- Optional: Include jQuery for Bootstrap functionality -->
